--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-hyper-pagination",
   "description": "Pagination using `After Key` and slicing the resulted pages into small pages.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "main": "./dist/react-hyper-pagination.umd.js",
   "module": "./dist/react-hyper-pagination.esm.js",
@@ -31,10 +31,10 @@
     "preview": "vite preview",
     "test": "vitest"
   },
-  "dependencies": {
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "^18.0.0 || ^17.0.0",
+    "react-dom": "^18.0.0 || ^17.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
@@ -49,6 +49,9 @@
     "jsdom": "^23.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vitest": "^1.0.4"
+    "vitest": "^1.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "path": "^0.12.7"
   }
 }
